Сделать больше строчек в лэндинге

--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -87,7 +87,7 @@
             <div class="icon">
                 <i class="fas fa-sitemap"></i>
             </div>
-            <h3>Грамотная структура</h3>
+            <h3>Грамотная организация материалов</h3>
             <p>
                 Хотя на&nbsp;сайте твоей кафедры, скорее всего, есть иерархия содержимого, мы уверены, что она
                 не&nbsp;выдержит никакого сравнения с&nbsp;нашей. На &pi;Cloud контент распределяется
