Использовать неразрывный пробел после «для»

--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -75,7 +75,7 @@
             <div class="icon">
                 <i class="fas fa-heart"></i>
             </div>
-            <h3>Сделано студентами для студентов</h3>
+            <h3>Сделано студентами для&nbsp;студентов</h3>
             <p>
                 &pi;Cloud появился, когда нам порядком надоел хаос, порождённый многообразием источников. Мы решили
                 собрать всю информацию в&nbsp;одном месте и&nbsp;сделать так, чтобы к&nbsp;ней можно было легко
