--- a/cloud/static/css/main.css
+++ b/cloud/static/css/main.css
@@ -453,6 +453,16 @@ footer a {
     clear: both;
 }
 
+@media only screen and (max-width: 30em) {
+    .headline .buttons {
+        float: none;
+    }
+
+    .headline {
+        text-align: center;
+    }
+}
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
