Отображение общего количества студентов в рейтингах кармы

--- a/cloud/templates/karma.html
+++ b/cloud/templates/karma.html
@@ -26,15 +26,15 @@
                 <table class="table" style="text-align: left">
                     <tr>
                         <td>Общий рейтинг</td>
-                        <td>{{ global_top }}</td>
+                        <td>{{ global_top }} / {{ global_count }}</td>
                     </tr>
                     <tr>
                         <td>Рейтинг по Вузу</td>
-                        <td>{{ univer_top }}</td>
+                        <td>{{ univer_top }} / {{ univer_count }}</td>
                     </tr>
                     <tr>
                         <td>Рейтинг по Факультету</td>
-                        <td>{{ depart_top }}</td>
+                        <td>{{ depart_top }} / {{ depart_count }}</td>
                     </tr>
                 </table>
 
