Исправить аутентификацию в yandex webmaster

--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -23,6 +23,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    
+    <!-- Аутентификация в Яндекс Вебмастер -->
+    <meta name="yandex-verification" content="c3f40ad459bc9654"/>
 </head>
 <body>
 
