--- a/cloud/templates/auth/signin.html
+++ b/cloud/templates/auth/signin.html
@@ -11,12 +11,10 @@
 
 {% block content %}
 
+    <div class="container-fluid sign-form">
 
-
-    <form method="post" action="{% url 'signin' %}">
-        {% csrf_token %}
-
-        <div class="container-fluid sign-form">
+        <form method="post" action="{% url 'signin' %}">
+            {% csrf_token %}
 
             {% if msg %}
                 <div class="alert alert-info alert-dismissable" role="alert">
@@ -55,17 +53,16 @@
                 <input class="btn btn-default col-xs-12" type="submit" value="Войти"/>
             </div>
 
-            <br><br><hr>
+        </form>
 
-            <div class="social vk">
-                <a href="https://oauth.vk.com/authorize?client_id=6477166&display=page&redirect_uri=http://{% if host %}{{ host }}{% else %}picloud.pw{% endif %}{% url 'vk_auth' %}&response_type=code&v=5.74">
-                    <i class="fa fa-vk fa-2x"></i>
-                </a>
-            </div>
+        <br><br><hr>
 
-
+        <div class="social vk">
+            <a href="{{ vk_auth_link }}">
+                <i class="fa fa-vk fa-2x"></i>
+            </a>
         </div>
 
-    </form>
+    </div>
 
 {% endblock %}
