Использовать "записи" вместо "постов"

--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -30,7 +30,7 @@
             {% if child_posts %}
                 <div class="panel panel-primary">
                     <div class="panel-heading" data-toggle="collapse" href="#child_posts">
-                        Дочерние посты
+                        Дочерние записи
                     </div>
                     <div id="child_posts" class="collapse in">
                         <div class="panel-body no-margin-padding">
