--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -156,9 +156,9 @@
                         </div>
 
 
-                        <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet" target="_blank">
+                        <a href="https://github.com/sandino/Markdown-Cheatsheet/blob/master/README.md" target="_blank">
                             <div id="info" class="btn btn-info col-xs-2 col-sm-1 col-md-1 col-lg-1 pull-right"
-                                 title="Дополнительная информация" style="border-radius: 50px">
+                                 title="Справка по языку разметки Markdown" style="border-radius: 50px">
                                 <span style="font-size:16px;" class="showopacity glyphicon glyphicon-info-sign"></span>
                             </div>
                         </a>
