--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -19,7 +19,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 search-select"><div class="label">Факультет:</div>{{ department.department }}</div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 search-select"><div class="label">Кафедра:</div>{{ chair.chair }}</div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 search-select"><div class="label">Программа:</div>{{ program.program }}</div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 search-select"><div class="label">Предмет:</div>{{ subject.subject }}</div>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 search-select"><div class="label">Дисциплина:</div>{{ subject.subject }}</div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 search-select"><div class="label">Тип материала:</div>{{ subject.type }}</div>
         <hr>
         <div id="search-select" class="col-xs-12 col-sm-12 col-md-4 col-lg-4 search-select">
