Переименовать эндпоинт /cloud в /feed

--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -67,7 +67,7 @@
             типовики и&nbsp;лабораторые работы&nbsp;—
             всё это есть на&nbsp;<strong>&pi;Cloud</strong>’е.
         </p>
-        <a href="{% url 'cloud' %}" class="button">
+        <a href="{% url 'feed' %}" class="button">
             Перейти в&nbsp;хранилище
         </a>
     </div>
