--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -74,7 +74,7 @@
                 {% endif %}
 
                 <li>
-                    <a href="{% url 'cloud' %}">
+                    <a href="{% url 'feed' %}">
                         Облако
                         <span style="font-size:16px;"
                               class="pull-right hidden-xs showopacity glyphicon glyphicon-cloud">
