--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -19,7 +19,7 @@
                 <div class="post-panel panel-settings">
 
                     <div class="row">
-                        <div class="col-xs-12 col-sm-5 col-md-12 col-lg-12">
+                        <div class="col-xs-12 col-sm-5 col-md-12 col-lg-12" style="margin: 1rem 0;">
                             <div class="avatar-settings"
                                  style="background-image: url({{ user_info.avatar.url }})"></div>
                         </div>
