--- a/cloud/static/css/post.css
+++ b/cloud/static/css/post.css
@@ -13,6 +13,7 @@ article.post .post-container {
 
 article.post .post-container h1 {;
     font-size: 2rem;
+    margin: 2rem 0 1rem;
 }
 
 article.post .post-container .text {
