Исправить URL эндпойнта в форме поиска
А то он всегда дёргал редиректный /search, а не /search/, как должен был.

--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -78,7 +78,7 @@
             .search({
                 // change search endpoint to a custom endpoint by manipulating apiSettings
                 apiSettings: {
-                    url: '/search?request={query}'
+                    url: '/search/?request={query}'
                 },
                 maxResults: 10,
                 type: 'category'
