--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -98,12 +98,10 @@
                         <span class="showopacity glyphicon glyphicon-pencil"></span>
                     </a>
                 {% endif %}
-                <span class="post-views-counter" title="Число просмотров">
-                    <span style="font-size:12px;"
-                          aria-label="Число просмотров"
-                          class="showopacity glyphicon glyphicon-eye-open">
-                    </span>
-                    {{ post.views }}
+
+                <span class="ui" style="color: #999999">
+                    <i class="eye icon" title="Число просмотров"></i>{{ post.views }}
+                    <i class="comment icon" title="Число комментариев"></i>{{ post.get_comment_count }}
                 </span>
             </span>
         </footer>
