Переименовать пункт меню 'Администрирование'

--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -139,7 +139,7 @@
                 {% if user.is_superuser %}
                     <li style="background-color: #DBC6EB">
                         <a href="/admin">
-                            Администрирование
+                            Админ панель
                             <i style="font-size: 16px" class="pull-right hidden-xs showopacity fas fa-crown"></i>
                         </a>
                     </li>
