--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -76,8 +76,8 @@
             <a class="post-author"
                title="Автор записи"
                href="/user/{{ post.author.pk }}">{{ post.author }}</a>
-            <span class="post-created-date" title="Дата и время создания записи">
-                ({{ post.created_date }})
+            <span class="post-created-date">
+                • <span title="Дата и время создания записи">{{ post.created_date_human }}</span>
             </span>
             <span class="post-footer-badges">
                     <a class="post-footer-button-create-child-post"
