Заменить кнопку подгрузки на Semantic UI

--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -57,7 +57,7 @@
     </div>
 
     <div id="load-more-panel">
-        <button id="btn-load-more" class="btn btn-default" onclick="loadMore()" disabled>
+        <button id="btn-load-more" class="ui button" onclick="loadMore()" disabled>
             Подождите…
         </button>
     </div>
