Рисовать спиннер на кнопке подгрузки

--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -57,8 +57,7 @@
     </div>
 
     <div id="load-more-panel">
-        <button id="btn-load-more" class="ui button" onclick="loadMore()" disabled>
-            Подождите…
+        <button id="btn-load-more" class="ui loading primary button" onclick="loadMore()" disabled>
         </button>
     </div>
 
