--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -58,6 +58,7 @@
 
     <div id="load-more-panel">
         <button id="btn-load-more" class="ui loading primary button" onclick="loadMore()" disabled>
+            Загрузить ещё
         </button>
     </div>
 
